--- a/ys_ecommerce/pom.xml
+++ b/ys_ecommerce/pom.xml
@@ -11,8 +11,8 @@
     <groupId>ys</groupId>
     <artifactId>ecommerce</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>ecommerce</name>
-    <description>ecommerce</description>
+    <name>ys_ecommerce</name>
+    <description>ys_ecommerce</description>
     <properties>
         <java.version>17</java.version>
     </properties>
@@ -36,11 +36,6 @@
             <groupId>com.h2database</groupId>
             <artifactId>h2</artifactId>
             <scope>runtime</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-configuration-processor</artifactId>
-            <optional>true</optional>
         </dependency>
         <dependency>
             <groupId>org.projectlombok</groupId>
