--- a/ys_ecommerce/front-end/package.json
+++ b/ys_ecommerce/front-end/package.json
@@ -11,7 +11,8 @@
     "bootstrap": "^4.5.3",
     "bootstrap-vue": "^2.22.0",
     "core-js": "^3.8.3",
-    "vue": "^2.7.10"
+    "vue": "^2.7.10",
+    "vue-router": "^3.6.5"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
